Bug 796184 - Revert UnixSocketImpl to a bare pointer, make Bluetooth*Managers use CloseSocket; r=cjones r=gyeh

--HG--
extra : rebase_source : fe8f4633eb9fb86ffc4a87e6b483b3357ab9896d